[package]
name = "scribble_curves"
version = "0.1.0"
authors = ["Joe Neeman <joeneeman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { version = "0.6.0", features = ["im"] }
serde = { version = "1.0", features = ["derive", "rc"] }
gstreamer = "0.15.4"
log = "0.4.8"
# This needs to be in sync with the version in druid
im = { version = "15.0", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0.53"
serde_cbor = "0.11.1"
