[package]
name = "scribl_curves"
version = "0.1.0"
authors = ["Joe Neeman <joeneeman@gmail.com>"]
edition = "2018"
readme = "../README.md"
license = "MIT"
repository = "https://github.com/jneem/scribl"
description = "Some data structures for the `scribl` animation program"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#druid = { git = "https://github.com/linebender/druid.git", features = ["im"] }
druid = { path = "../../druid/druid", features = ["im"] }
serde = { version = "1.0", features = ["derive", "rc"] }
gstreamer = "0.16"
log = "0.4.8"
# This needs to be in sync with the version in druid
im = { version = "15.0", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0.53"
serde_cbor = "0.11.1"
proptest = "0.10.0"
