[package]
name = "scribble"
version = "0.1.0"
authors = ["Joe Neeman <joeneeman@gmail.com>"]
edition = "2018"
readme = "../README.md"
description = "Create simple instructional videos"
license = "MIT"
repository = "https://github.com/jneem/scribble"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scribble_curves = { version = "0.1.0", path = "../curves/" }
druid = { version = "0.6.0", features = ["im"] }
log = "0.4.8"
cpal = "0.11.0"
serde = { version = "1.0", features = ["derive", "rc"] }
gstreamer = "0.15.4"
gstreamer-video = "0.15.3"
gstreamer-app = "0.15.4"
anyhow = "1.0.27"
gstreamer-audio = "0.15.3"
thiserror = "1.0.14"
rnnoise-c = "0.2.0"
phase_vocoder = "0.1.0"
lufs = "0.1.0"
clap = "2.33.0"
pkg-version = "1.0.0"
env_logger = "0.7.1"
serde_cbor = "0.11.1"
