[package]
name = "scribl"
version = "0.1.0"
authors = ["Joe Neeman <joeneeman@gmail.com>"]
edition = "2018"
readme = "../README.md"
description = "Create simple instructional videos"
license = "MIT"
repository = "https://github.com/jneem/scribl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scribl_curves = { version = "0.1.0", path = "../curves/" }
druid = { version = "0.6.0", features = ["im"] }
log = "0.4.8"
serde = { version = "1.0", features = ["derive", "rc"] }
gstreamer = "0.15.4"
gstreamer-video = "0.15.3"
gstreamer-app = "0.15.4"
anyhow = "1.0.27"
gstreamer-audio = "0.15.3"
thiserror = "1.0.14"
rnnoise-c = "0.2.0"
lufs = "0.1.0"
clap = "2.33.0"
pkg-version = "1.0.0"
env_logger = "0.7.1"
serde_cbor = "0.11.1"
directories-next = "1.0.1"
toml = "0.5.6"
console = { version = "0.11.3", default-features = false }
nnnoiseless = "0.1.1"
