[package]
name = "scribl"
version = "0.3.3"
authors = ["Joe Neeman <joeneeman@gmail.com>"]
edition = "2018"
readme = "../README.md"
description = "Create simple instructional videos"
license = "MIT"
repository = "https://github.com/jneem/scribl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.27"
clap = "2.33.0"
console = { version = "0.14.0", default-features = false }
directories-next = "2.0"
druid = { version = "0.7", features = ["im"] }
ebur128 = "0.1.1"
env_logger = "0.8.2"
gstreamer = "0.16"
gstreamer-app = "0.16"
gstreamer-audio = "0.16"
gstreamer-video = "0.16"
log = "0.4.8"
nnnoiseless = { version = "0.3.0", default-features = false }
pkg-version = "1.0.0"
scribl_curves = { version = "0.3", path = "../curves/" }
scribl_widget = { version = "0.3", path = "../widget/" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_cbor = "0.11.1"
thiserror = "1.0.14"
toml = "0.5.6"
crossbeam-channel = "0.5"

