[package]
name = "scribl_widget"
version = "0.3.1"
authors = ["Joe Neeman <joeneeman@gmail.com>"]
edition = "2018"
readme = "../README.md"
license = "MIT"
repository = "https://github.com/jneem/scribl"
description = "Some druid widgets for the `scribl` animation program"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
druid = "0.7"
log = "0.4.11"

